--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
     </header>
 
     <section>
-<!--         {% if results %} -->
+        {% if results %}
         <div class="grid">
             <table id="myTable">
                 <tr class="header">
@@ -45,7 +45,7 @@
                 {%endfor%}
             </table>
         </div>
-<!--         {% endif %} -->
+        {% endif %}
     </section>
     
 </body>
