--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
         <nav class="navbar">
             <div class="logo">
                 <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="90" height="90">       
-                    <image xlink:href="https://www.ask.com/wp-content/themes/ask-2022/assets/images/site-Logo.svg"width="75" height="75"/>    
+                    <image xlink:href="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ab/Ask.com_Logo.svg/1200px-Ask.com_Logo.svg.png"width="75" height="75"/>    
                 </svg>
             </div>
             
